<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dutchie-Meetly</string>
    <string name="welcome_title">Meetly</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_events">ListEvents</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_welcome_screen">Meetly</string>
    <string name="skip_button">Skip</string>
    <string name="title_hint">Enter Event Title</string>
    <string name="description_hint">Enter Event Description</string>
    <string name="create_event_title">Create an Event</string>
    <string name="title_activity_view_event">ViewEventActivity</string>
    <string name="event_view_name">Event Name</string>
    <string name="event_view_date">Date: </string>
    <string name="event_view_location">Location: </string>
    <string name="event_view_description">Description: </string>
    <string name="event_view_start_time">Event Start Time: </string>
    <string name="event_view_end_time">Event End Time: </string>
    <string name="event_view_duration">Duration: </string>
    <string name="event_view_timeperiod">Time Period: </string>
    <string name="event_view_see_map">See Map</string>
    <string name="event_view_time_remaining">Days Left Until Event </string>
    <string name="title_activity_view_event_maps">Map</string>
    <string name="login_title">Login</string>
    <string name="logout_title">Logout</string>
    <string name="event_button_create">Create Event</string>
    <string name="event_button_done">Done</string>
    <string name="event_button_find_me">Find Me</string>
    <string name="event_button_find_event">Find Event</string>
    <string name="event_item_duration">00 Hours 00 Minutes</string>
    <string name="event_item_date">dd-MM-yyyy</string>
    <string name="action_new_event">New Event</string>
    <string name="action_fetch_event">Fetch Event</string>
    <string name="title_activity_test">test</string>
    <string name="hello_world">Hello world!</string>
    <string name="check_details">Not all details set</string>
    <string name="wifi">Wifi p2p settings</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="edit_event_title">Edit Event</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="event_status_completed">Event completed</string>
    <string name="event_status_started">Event started</string>
    <string name="event_time_until">Time Until Event: calculating...</string>
    <string name="user_title">User: </string>
    <string name="unknown_location_title">Unknown Location</string>
    <string name="logout_prompt_title">Are you sure you want to Logout?</string>
    <string name="yes_title">Yes</string>
    <string name="no_title">No</string>
    <string name="error_duration">Start time cannot occur after end time. Choose a new time.</string>
    <string name="share_title">Share</string>
    <string name="shared_status_title">Shared status</string>
    <string name="event_author_title">Author</string>
    <string name ="title_activity_bluetooth_test">Bluetooth Test</string>
    <string name="title_activity_update_frequency">UpdateFrequency</string>
    <string name="button_apply">Apply</string>
</resources>
