<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.sfu.generiglesias.dutchie_meetly.ViewEventActivity">

    <TextView android:text="@string/event_view_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_view_id_name"
        android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_view_description"
        android:id="@+id/event_view_id_description"
        android:layout_marginTop="97dp"
        android:textSize="25dp"
        android:layout_below="@+id/event_view_id_location"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_view_date"
        android:id="@+id/event_view_id_date"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/event_view_id_name"
        android:layout_alignParentStart="true"
        android:textSize="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_view_location"
        android:id="@+id/event_view_id_location"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/event_view_id_date"
        android:layout_alignStart="@+id/event_view_id_date"
        android:textSize="28dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_view_see_map"
        android:id="@+id/button_viewmap"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/event_view_time_remaining"
        android:id="@+id/event_view_id_time_remaining"
        android:layout_below="@+id/event_view_id_name"
        android:layout_alignParentStart="true" />


</RelativeLayout>
