<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.sfu.generiglesias.dutchie_meetly.ListEventsActivity">

    <item android:id="@+id/new_event"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new_event"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:title="Settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/login_event"
        android:title="@string/login_title"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/logout_event"
        android:title="@string/logout_title"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

</menu>
